# AI-development

./: README.md
ai-background-generation/: Dockerfile  README.md  main.py  requirements.txt  test_installation.py
ai-background-generation/api/core/: auth.py  config.py  metrics.py
ai-background-generation/api/services/: inference.py
ai_agents/: README.md
ai_agents/Google_ADK/adk_rag_agent/: README.md
ai_agents/Google_ADK/deploying_agents_to_GCP/: .env.sample  README.md  pyproject.toml
ai_agents/Google_ADK/deploying_agents_to_GCP/adk_basic_bot/: agent.py
ai_agents/Google_ADK/deploying_agents_to_GCP/deployment/: cleanup.py  local.py  remote.py
ai_agents/basics/: README.md
ai_evals/notes/: Instruction_1.md
ai_workflows/Document_analysis_RAG/: README.md  get_embedding_function.py  query_data.py  run_pipeline.sh  test_rag.py
ai_workflows/RecipeMate_chatbot/: .env.sample  Dockerfile.api  Dockerfile.ui  Makefile  README.md  docker-compose.yml  requirements copy.txt  requirements_test.txt
ai_workflows/knowledge_graphs/: .env.sample  README.md  config.py  generate_knowledge_graph.py  knowledge_graph.html  knowledge_graph_open_ended.html  pyproject.toml
ai_workflows/knowledge_graphs/data/: product_description.txt
ai_workflows/n8n/: README.md  docker-compose.yml  setup_env.sh
api_design/FastAPI/: README.md
api_design/concepts/: README.md
api_design/design_patterns/: 1-Intro.md  2-Examples.md  dependency_injection.md  ecommerce.py
classical_ml/fraud_detection_system/: README.md
classical_ml/gpu_accelerated_pipeline/: README.md  requirements.txt
(+135 files in other folders)
