[project]
name = "knowledge-graphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "python-dotenv>=1.1.1",
    "pyvis>=0.3.2",
    "streamlit>=1.50.0",
]
